# smartcar

./: README.md  start.sh~
can_bridge/: CMakeLists.txt  package.xml  readme.md
can_bridge/docs/: Yunle_S01_CAN_CMX_V0_1_8-20180522.xlsx
can_bridge/include/: CanBridge.h  CanClient.h  DefaultCanClient.h  ErrorCode.h  Msg.h  utils.h
can_bridge/launch/: can_bridge.launch
can_bridge/src/: CanBridge.cpp  CanBridge_node.cpp  CanClient.cpp  DefaultCanClient.cpp  Msg.cpp
common/image_rectifier/: CMakeLists.txt  package.xml
common/image_rectifier/include/: image_rectifier.h
common/image_rectifier/launch/: image_rectifier.launch
common/image_rectifier/src/: image_rectifier.cpp
common/utils/: CMakeLists.txt
common/utils/include/: filter_ground.h.backup  ground_filter (copy).hpp  ground_filter.hpp  ground_filter.hpp.original  utils.hpp
common/utils/launch/: util_viz.launch
common/utils/src/: filter_ground.cpp.backup  ground_filter.hpp.backup
control/waypoint_follower/: CMakeLists.txt  package.xml
control/waypoint_follower/launch/: pure_persuit.launch
control/waypoint_follower/nodes/pure_persuit/: pure_persuit.cpp  (+2 more)
control/waypoint_maker/: CMakeLists.txt  filtered_waypoints.csv  package.xml
control/waypoint_maker/launch/: waypoint_loader.launch
detection/bst_detection/: CMakeLists.txt  CMakeLists.txt_backup  package.backup
detection/bst_detection/calib/: 1080_intrinsic.xml  extrinsic100.xml  extrinsic60.xml  intrins100.xml  intrins60.xml  radar.yml
detection/bst_detection/launch/: bst_detection_node.launch
detection/bst_detection/src/: detection_node.cpp
detection/calibration/camera_calibration/: CMakeLists.txt  README.md  setup.py
detection/camera_point_fusion/joint_pixel_pointcloud/: CMakeLists.txt  README.md
detection/lidar_detection/filter_global_ground/: CMakeLists.txt  package.xml
driver/cv_camera/: CMakeLists.txt  package.xml
driver/cv_camera/launch/: cv_camera_driver.launch
driver/cv_camera/src/: capture.cpp  cv_camera_node.cpp  cv_camera_nodelet.cpp  driver.cpp
driver/cv_camera/test/: test_cv_camera.cpp  test_cv_camera_no_yaml.cpp
driver/hall_encoder/: CMakeLists.txt  package.xml
driver/hall_encoder/launch/: hall_encoder_node.launch
driver/hall_encoder/src/: hall_encoder_node.cpp  hall_encoder_node.h
driver/razor_imu_9dof/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
driver/razor_imu_9dof/cfg/: imu (copy).cfg
driver/razor_imu_9dof/config/: my_razor.yaml  my_razor_24.yaml  my_razor_30.yaml  razor_diags.yaml
driver/razor_imu_9dof/launch/: razor-pub-3.0.launch  razor-pub-and-display-3-0.launch  razor-pub-and-display.launch  razor-pub.launch
driver/razor_imu_9dof/nodes/: display_3D_visualization.py  imu3_0.py  imu_node.py
launch_package/: CMakeLists.txt  README.md  package.xml
launch_package/launch/: smartcar.launch  smartcar.launch~  test_ndt_localization.launch  test_perception.launch  test_smartcar.launch  yunle_car.launch  yunle_car.launch~
launch_package/src/: welcome.cpp
localization/ndt_localization/: CMakeLists.txt  README.md  package.xml
localization/ndt_localization/launch/: build_cluster_map.launch  ndt_localization.launch  points_to_costmap.launch  smartcar_ndt_localization.launch  test_localization.launch  test_ndt.launch  test_ndt_localization.launch  test_plan.launch  test_yunle_ndt.launch  traj.launch  waypoint_control.launch
localization/ndt_localization/lib/: libndt_gpu.so.1024
localization/ndt_localization/params/: test.yaml
localization/ndt_localization/rviz/: smartcar_test.rviz  test.rviz  test_ndt_localization.rviz
localization/ndt_localization/src/: ndt_localization.cpp  ndt_localization_node.cpp  ndt_test.cpp  tf_test.cpp
localization/ndt_localization/trajectories/: 2018-10-22-19-44-24.traj  2018-10-22-20-16-18.traj
map/ndt_mapping/: CMakeLists.txt  README.md  package.xml
map/ndt_mapping/launch/: collect_data.launch  fast_ndt_carla.launch  fast_ndt_mapping.launch
map/ndt_mapping/params/: params_carla.yaml  params_ndt_mapping.yaml
map/ndt_mapping/rviz/: test.rviz
map/ndt_mapping/src/: LidarMapping.1backup.cpp  LidarMapping.cpp  fast_ndt_mapping_node.cpp
msgs/smartcar_msgs/: CMakeLists.txt  package.xml
msgs/smartcar_msgs/msg/: ControlCommand.msg  ControlCommandStamped.msg  DetectedObject.msg  ImageObj.msg  Lane.msg  ProjectionMatrix.msg  Waypoint.msg
msgs/yunle_sensor_msgs/: CMakeLists.txt  package.xml
msgs/yunle_sensor_msgs/msg/: DetectLane.msg  DetectLanes.msg  DetectObject.msg  DetectObjs.msg
planning/global_planning/: CMakeLists.txt  README.md  package.xml
planning/global_planning/cfg/: global_planning_configure.cfg
planning/global_planning/launch/: global_planning_smartcat.launch  load_path.launch  load_static_path.launch  test_global_planning_lanecross.launch
planning/global_planning/map_file/: map.yaml
planning/global_planning/path_file/: cross_0.csv  cross_1.csv  cross_2.csv  cross_3.csv  cross_4.csv  cross_5.csv  cross_6.csv  cross_7.csv  cross_8.csv  cross_9.csv  lane_0.csv  lane_1.csv  lane_2.csv  lane_3.csv  lane_4.csv  lane_5.csv  lane_6.csv
planning/global_planning/rviz/: global_plan_lanecross.rviz
planning/global_planning/src/: global_plan_node.cpp  load_static_path.cpp
planning/global_planning/static_path/: yunle_zetong.csv
planning/local_planner/: CMakeLists.txt  package.xml
planning/local_planner/launch/: local_trajectory_generator.launch  op_trajectory_generator.launch  rollout_generator.launch
planning/local_planner/utils/: utils.cpp
test/gateway/: CMakeLists.txt  package.xml
test/gateway/config/: config.ini
test/gateway/proto/: protoc  protoc_msg.proto  protoc_msg_pb2.py
test/gateway/src/: monitor.py  server.py  twisted_client_v1.0.py  twisted_server.py  twisted_server_v1.0.py  video_client.py  video_rtmp_client.py  video_tcp_server.py  video_twisted_client.py
test_module/plane_fit_ground_filter/: CMakeLists.txt  README.md  package.xml  plane_ground_filter.launch
test_module/ransac_ground_filter/: CMakeLists.txt  package.xml
test_module/voxel_ground_filter/: CMakeLists.txt  package.xml
(+261 files in other folders)
